Add claw movement

--- a/app/views/home/_controls.html.erb
+++ b/app/views/home/_controls.html.erb
@@ -59,11 +59,11 @@
 				C350.9,78.8,345.7,84,345.7,90.5z"/>
           <path fill="#EEEFEF" d="M351.6,90.5c0,3.2,2.6,5.7,5.7,5.7c3.2,0,5.7-2.6,5.7-5.7c0-3.2-2.6-5.7-5.7-5.7
 				C354.2,84.8,351.6,87.3,351.6,90.5z"/>
-          <g id="firstfinger_1_">
+          <g class="firstfinger_1_" id ="firstfinger_close">
             <polygon fill="#40ADB2" points="488.6,220.9 507.8,215.4 487.4,144.3 424.2,117.1 416.3,135.5 470.8,158.9 				"/>
             <circle fill="#58595B" cx="478" cy="152.5" r="14.4"/>
           </g>
-          <g id="secondfinger_1_">
+          <g class="secondfinger_1_">
             <polygon fill="#40ADB2" points="481.3,226 475.8,245.2 404.8,224.8 377.6,161.5 396,153.6 419.4,208.2 				"/>
             <circle fill="#58595B" cx="413" cy="215.4" r="14.4"/>
           </g>
