--- a/app/assets/stylesheets/controls.css
+++ b/app/assets/stylesheets/controls.css
@@ -13,23 +13,35 @@ svg {
   overflow: visible;
 }
 
-/*#secondfinger_1_ {*/
-  /*transform-origin: 10% 10%;*/
-  /*animation-name: moveSecondFinger;*/
-  /*animation-duration: 0.6s;*/
-  /*animation-timing-function: linear;*/
-  /*animation-iteration-count: infinite;*/
-  /*animation-direction: alternate;*/
-/*}*/
+/*#secondfinger_1_*/
+#secondfinger_close{
+  transform-origin: 10% 10%;
+  animation-name: moveSecondFingerClose;
+  animation-duration: 0.6s;
+  animation-timing-function: linear;
+}
 
-/*#firstfinger_1_ {*/
-  /*transform-origin: 10% 10%;*/
-  /*animation-name: moveFirstFinger;*/
-  /*animation-duration: 0.6s;*/
-  /*animation-timing-function: linear;*/
-  /*animation-iteration-count: infinite;*/
-  /*animation-direction: alternate;*/
-/*}*/
+#secondfinger_open{
+  transform-origin: 10% 10%;
+  animation-name: moveSecondFingerOpen;
+  animation-duration: 0.6s;
+  animation-timing-function: linear;
+}
+
+/*#firstfinger_1_*/
+#firstfinger_open {
+  transform-origin: 10% 10%;
+  animation-name: moveFirstFingerOpen;
+  animation-duration: 0.6s;
+  animation-timing-function: linear;
+}
+
+#firstfinger_close {
+  transform-origin: 10% 10%;
+  animation-name: moveFirstFingerClose;
+  animation-duration: 0.6s;
+  animation-timing-function: linear;
+}
 
 /*#claw_1_*/
 #claw_move_up {
@@ -65,7 +77,16 @@ svg {
 /*}*/
 
 
-@keyframes moveFirstFinger {
+@keyframes moveFirstFingerOpen {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-30deg);
+  }
+}
+
+@keyframes moveFirstFingerClose {
   0% {
     transform: rotate(-30deg);
   }
@@ -73,7 +94,17 @@ svg {
     transform: rotate(0deg);
   }
 }
-@keyframes moveSecondFinger {
+
+@keyframes moveSecondFingerOpen {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(30deg);
+  }
+}
+
+@keyframes moveSecondFingerClose {
   0% {
     transform: rotate(30deg);
   }
@@ -81,6 +112,7 @@ svg {
     transform: rotate(0deg);
   }
 }
+
 @keyframes moveClawUp {
   0% {
     transform: rotate(20deg);
